libx11 (2:1.2.1-1) UNRELEASED; urgency=low

  * New upstream release.
  * Patch 012_ru_RU_UTF-8_XLC_LOCALE.diff removed, applied upstream.

 -- Julien Cristau <jcristau@debian.org>  Wed, 08 Apr 2009 02:37:36 +0200

libx11 (2:1.2-1) unstable; urgency=low

  * New upstream release.
  * Remove obsolete ld.so.conf handling from libx11-6 postinst.
  * Run autoreconf on build; add build-deps on automake, libtool, xutils-dev.
  * Handle parallel builds.
  * Refresh patches 003_recognize_glibc_2.3.2_locale_names.diff and
    012_ru_RU_UTF-8_XLC_LOCALE.diff.
  * Use a wildcard for usr/share/X11/locale instead of listing every single
    file.

 -- Julien Cristau <jcristau@debian.org>  Mon, 09 Mar 2009 16:36:09 +0100

libx11 (2:1.1.99.2-1) experimental; urgency=low

  * New upstream release.
  * Use new xcb socket handoff mechanism, update (build-)dependencies.
  * Refresh patches.
  * Build-dep on x11proto-core-dev >= 7.0.13.

 -- Julien Cristau <jcristau@debian.org>  Mon, 01 Dec 2008 22:37:28 +0100

libx11 (2:1.1.5-2) unstable; urgency=medium

  * Cherry-picked from upstream git: Fix an XCB leak when the client has a
    non-fatal error handler.

 -- Julien Cristau <jcristau@debian.org>  Thu, 25 Sep 2008 17:45:25 +0200

libx11 (2:1.1.5-1) unstable; urgency=low

  [ Brice Goglin ]
  * Add upstream URL to debian/copyright.
  * Add a link to www.X.org and a reference to the upstream module
    in the long description.

  [ Timo Aaltonen ]
  * New upstream release.
    + adds missing <cedilla> Compose sequences (closes: #394068)

  [ Julien Cristau ]
  * 014_add_Khmer_digraphs.diff: remove, applied upstream
  * 006_tailor_pt_BR.UTF-8_Compose.diff: update

 -- Julien Cristau <jcristau@debian.org>  Sun, 14 Sep 2008 19:09:33 +0200

libx11 (2:1.1.4-2) unstable; urgency=low

  * Drop Pre-Depends on x11-common from libx11-6, libx11-data and libx11-xcb1.
  * Pull from upstream libX11-1.1-branch
    + fixes Compose sequences for finnish keyboards (closes: #467142)